<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        xmlns:tools = "http://schemas.android.com/tools"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:orientation = "vertical"
        android:background = "@color/darkGray"
        android:id="@+id/email_signup_fragment"
        tools:context = ".ui.signup.signup_email_fragment">
    <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/email_signup"
            android:textColor = "@color/white"
            android:textSize = "30sp"
            android:layout_marginTop = "25dp"
            android:layout_marginLeft = "15dp"
            android:textStyle = "bold" />
    <EditText

            android:id = "@+id/email_edit_text"
            android:layout_marginTop = "5dp"
            android:textCursorDrawable = "@drawable/cursor"
            android:layout_marginRight = "15dp"
            android:layout_marginLeft = "15dp"
            android:layout_width = "match_parent"
            android:layout_height = "50dp"
            android:background = "@drawable/custom_login_edit_text"
            android:inputType = "textEmailAddress"
            android:textColor = "@color/white" />
    <TextView

            android:id = "@+id/sign_up_email_status"
            android:layout_width = "wrap_content"
            android:layout_height = "15dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginTop = "8dp"
            android:textColor = "@color/white"
            android:textSize = "12sp"
            android:text = "@string/confirmation_signup" />
    <TextView

            android:id = "@+id/sign_up_email_status2"
            android:layout_width = "wrap_content"
            android:layout_height = "15dp"
            android:layout_marginLeft = "15dp"
            android:textColor = "@color/white"
            android:textSize = "12sp" />
    <Button
            android:id = "@+id/next_button"
            android:layout_width = "120dp"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "25dp"
            android:layout_gravity = "center"
            android:background = "@drawable/custom_login_button"
            android:text = "@string/next" />


</LinearLayout>