<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        xmlns:tools = "http://schemas.android.com/tools"
        xmlns:app = "http://schemas.android.com/apk/res-auto"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:background = "@color/darkGray"
        android:orientation = "vertical"
        android:id="@+id/password_signup_fragment"
        tools:context = ".ui.signup.signup_password">
    <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/signup_password"
            android:textColor = "@color/white"
            android:textSize = "30sp"
            android:layout_marginTop = "25dp"
            android:layout_marginLeft = "15dp"
            android:textStyle = "bold" />

    <com.google.android.material.textfield.TextInputLayout

            app:passwordToggleEnabled = "true"
            android:layout_marginRight = "15dp"
            android:layout_marginLeft = "15dp"
            android:layout_width = "match_parent"
            android:layout_height = "50dp"
            android:background = "@drawable/custom_login_edit_text"


            >

        <com.google.android.material.textfield.TextInputEditText
                android:id = "@+id/password_edit_text"
                android:textCursorDrawable = "@drawable/cursor"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:inputType = "textPassword"
                android:textColor = "@color/white"
                android:background = "@null"


                />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id = "@+id/password_status"
            android:layout_width = "wrap_content"
            android:layout_height = "15dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginTop = "8dp"
            android:textColor = "@color/white"
            android:textSize = "12sp"
            android:text = "@string/password_text" />
    <TextView
            android:id = "@+id/password_status2"
            android:layout_width = "wrap_content"
            android:layout_height = "15dp"
            android:layout_marginLeft = "15dp"
            android:textColor = "@color/white"
            android:textSize = "12sp"
            android:text = "@string/password_text" />

    <Button
            android:id = "@+id/next_button"
            android:layout_width = "120dp"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "25dp"
            android:layout_gravity = "center"
            android:background = "@drawable/custom_login_button"
            android:text = "@string/next" />


</LinearLayout>