<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        xmlns:tools = "http://schemas.android.com/tools"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:orientation = "vertical"
        tools:context = ".ui.signup.SignUpEmail">
    <RelativeLayout
            android:background="@color/darkGray"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:orientation = "horizontal"


            >
        <ImageButton
                android:layout_marginTop = "20dp"

                android:id = "@+id/back_button"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:src = "@drawable/ic_left_arrow"
                android:background = "@android:color/transparent" />
        <TextView
                android:layout_marginTop = "40dp"

                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:gravity = "center_horizontal"
                android:text = "@string/siginup_email_label"
                android:textColor = "@color/white"
                android:textSize = "15sp"
                android:layout_centerInParent = "true" />

    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
            android:id = "@+id/fragment_container"
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            >

    </androidx.fragment.app.FragmentContainerView>


</LinearLayout>